--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pngjs": "^2.1.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "v4l2camera": "^1.0.2"
+    "v4l2camera": "^1.0.2",
+    "johnny-five": "*"
   }
 }
