--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "v4l2camera": "^1.0.2",
-    "johnny-five": "*"
+    "johnny-five": "*",
+    "raspi-io" : "*"
   }
 }
