--- a/robot/package.json
+++ b/robot/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "johnny-five": "*",
     "pngjs": "^2.1.0",
+    "raspi-io": "*",
+    "raspicam": "^0.2.13",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "v4l2camera": "^1.0.2",
-    "johnny-five": "*",
-    "raspi-io" : "*"
+    "v4l2camera": "^1.0.2"
   }
 }
