--- a/robot/package.json
+++ b/robot/package.json
@@ -16,5 +16,11 @@
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "v4l2camera": "^1.0.2"
-  }
+  },
+  "jshintConfig": {
+  	  "undef": true,
+	  "unused": true,
+	  "node": true,
+	  "esversion": 6
+	}
 }
