--- a/robot/package.json
+++ b/robot/package.json
@@ -15,7 +15,8 @@
     "raspicam": "^0.2.13",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "v4l2camera": "^1.0.2"
+    "v4l2camera": "^1.0.2",
+    "death": "*"
   },
   "jshintConfig": {
   	  "undef": true,
