--- a/robot/package.json
+++ b/robot/package.json
@@ -9,19 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect": "^3.5.0",
+    "death": "^1.0.0",
+    "express": "^4.14.0",
     "johnny-five": "*",
     "pngjs": "^2.1.0",
     "raspi-io": "*",
     "raspicam": "^0.2.13",
+    "serve-static": "^1.11.1",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "v4l2camera": "^1.0.2",
-    "death": "*"
+    "v4l2camera": "^1.0.2"
   },
   "jshintConfig": {
-  	  "undef": true,
-	  "unused": true,
-	  "node": true,
-	  "esversion": 6
-	}
+    "undef": true,
+    "unused": true,
+    "node": true,
+    "esversion": 6
+  }
 }
