--- a/robot/package.json
+++ b/robot/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect": "^3.5.0",
     "death": "^1.0.0",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "johnny-five": "*",
     "pngjs": "^2.1.0",
